refactor: remove ResumeSkills component and integrate skill keywords into ResumeWorkItem for improved resume structure

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,8 +1,7 @@
 {
   "experience": "Experience",
-  "projects": "Projects",
+  "projects": "Personal Projects",
   "education": "Education",
-  "skills": "Skills",
   "languages": "Languages",
   "present": "Present",
   "duration": {
