--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -1,8 +1,7 @@
 {
     "experience": "Expérience",
-    "projects": "Projets",
+    "projects": "Projets personnels",
     "education": "Formation",
-    "skills": "Compétences",
     "languages": "Langues",
     "present": "Présent",
     "duration": {
