--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -7,5 +7,9 @@
   "duration": {
     "year": "{n} year | {n} years",
     "month": "{n} month | {n} months"
+  },
+  "footer": {
+    "description": "Page generated from a single JSON file without any other assets",
+    "viewOnGitHub": "View project on GitHub"
   }
 }
