--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -7,5 +7,9 @@
     "duration": {
         "year": "{n} an | {n} ans",
         "month": "{n} mois | {n} mois"
+    },
+    "footer": {
+        "description": "Page générée à partir d'un JSON unique sans aucun autre assets",
+        "viewOnGitHub": "Voir le projet sur GitHub"
     }
 }
